// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Expandable ExpandablePlaceholder renders 1`] = `
<div
  className="expandable"
>
  <button
    className="btn expandable-header"
  >
    <span>
      Placeholder title
    </span>
    <small>
      Placeholder subtitle
    </small>
  </button>
  <div
    className="expandable-content"
  >
    <p>
      Placeholder text
    </p>
  </div>
</div>
`;

exports[`Component: Expandable prints an expandable component when items is provided but is invalid 1`] = `
<Expandable
  items="wrong"
>
  <ExpandablePlaceholder>
    <div
      className="expandable"
    >
      <button
        className="btn expandable-header"
      >
        <span>
          Placeholder title
        </span>
        <small>
          Placeholder subtitle
        </small>
      </button>
      <div
        className="expandable-content"
      >
        <p>
          Placeholder text
        </p>
      </div>
    </div>
  </ExpandablePlaceholder>
</Expandable>
`;

exports[`Component: Expandable returns a number of expandables matching the length of items 1`] = `
<Expandable
  items={
    Array [
      Object {
        "content": "My accordion content",
        "title": "Foo",
      },
      Object {
        "content": "My accordion content",
        "title": "Bar",
      },
      Object {
        "content": "My accordion content",
        "title": "Baz",
      },
    ]
  }
>
  <div
    className="expandable"
    key="0"
  >
    

    <button
      className="btn expandable-header"
      type="button"
    >
      

      <span>
        Foo
      </span>
      

      <small />
      

    </button>
    <div
      className="expandable-content"
    >
      <p>
        My accordion content
      </p>
    </div>
  </div>
  <div
    className="expandable"
    key="1"
  >
    

    <button
      className="btn expandable-header"
      type="button"
    >
      

      <span>
        Bar
      </span>
      

      <small />
      

    </button>
    <div
      className="expandable-content"
    >
      <p>
        My accordion content
      </p>
    </div>
  </div>
  <div
    className="expandable"
    key="2"
  >
    

    <button
      className="btn expandable-header"
      type="button"
    >
      

      <span>
        Baz
      </span>
      

      <small />
      

    </button>
    <div
      className="expandable-content"
    >
      <p>
        My accordion content
      </p>
    </div>
  </div>
</Expandable>
`;

exports[`Component: Expandable returns an expandable component when no items are provided 1`] = `
<Expandable>
  <ExpandablePlaceholder>
    <div
      className="expandable"
    >
      <button
        className="btn expandable-header"
      >
        <span>
          Placeholder title
        </span>
        <small>
          Placeholder subtitle
        </small>
      </button>
      <div
        className="expandable-content"
      >
        <p>
          Placeholder text
        </p>
      </div>
    </div>
  </ExpandablePlaceholder>
</Expandable>
`;
